// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Log Essentials package when doing standard logging should match the snapshot 1`] = `
Array [
  Array [
    "[32m[32m✔[32m[39m",
    "[32mHello, world![39m
[32m[39m",
  ],
  Array [
    "[33m[33m⚠[33m[39m",
    "[33mHello, world![39m
[33m[39m",
  ],
  Array [
    "[34m[34mℹ[34m[39m",
    "[34mHello, world![39m
[34m[39m",
  ],
  Array [
    "[31m[31m✖[31m[39m",
    "[31mHello, world![39m
[31m[39m",
  ],
  Array [
    "[90mHello, world![39m
[90m[39m",
  ],
  Array [
    "Hello, world!
",
  ],
]
`;

exports[`Log Essentials package when using a logger with options should match the snapshot 1`] = `
Array [
  Array [
    "[32m[my-other-namespace][39m",
    "[32m:[39m",
    "[32m[32m✔[32m[39m",
    "[32mHello, world![39m
[32m[39m",
  ],
  Array [
    "[33m[my-other-namespace][39m",
    "[33m:[39m",
    "[33m[33m⚠[33m[39m",
    "[33mHello, world![39m
[33m[39m",
  ],
  Array [
    "[34m[my-other-namespace][39m",
    "[34m:[39m",
    "[34m[34mℹ[34m[39m",
    "[34mHello, world![39m
[34m[39m",
  ],
  Array [
    "[31m[my-other-namespace][39m",
    "[31m:[39m",
    "[31m[31m✖[31m[39m",
    "[31mHello, world![39m
[31m[39m",
  ],
  Array [
    "[90m[my-other-namespace][39m",
    "[90m:[39m",
    "[90mHello, world![39m
[90m[39m",
  ],
  Array [
    "[my-other-namespace]",
    ":",
    "Hello, world!
",
  ],
]
`;

exports[`Log Essentials package when using a namespaced logger should match the snapshot 1`] = `
Array [
  Array [
    "[32m[my-namespace][39m",
    "[32m:[39m",
    "[32m[32m✔[32m[39m",
    "[32mHello, world![39m
[32m[39m",
  ],
  Array [
    "[33m[my-namespace][39m",
    "[33m:[39m",
    "[33m[33m⚠[33m[39m",
    "[33mHello, world![39m
[33m[39m",
  ],
  Array [
    "[34m[my-namespace][39m",
    "[34m:[39m",
    "[34m[34mℹ[34m[39m",
    "[34mHello, world![39m
[34m[39m",
  ],
  Array [
    "[31m[my-namespace][39m",
    "[31m=>[39m",
    "[31m[31m✖[31m[39m",
    "[31mHello, world![39m
[31m[39m",
  ],
  Array [
    "[90m[my-namespace][39m",
    "[90m=>[39m",
    "[90mHello, world![39m
[90m[39m",
  ],
  Array [
    "[my-namespace]",
    "=>",
    "Hello, world!
",
  ],
]
`;
